# project-docs-mcp

./: README.md  pyproject.toml
src/know/: __init__.py
src/projectdocs/: __init__.py
